Fixing body overflow bug on Safari

--- a/apps/mealplan/client/styles/_globals.import.scss
+++ b/apps/mealplan/client/styles/_globals.import.scss
@@ -4,6 +4,8 @@
 html {
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
+  position: fixed;
 }
 
 body {
@@ -11,6 +13,7 @@ body {
   padding: 0;
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
 }
 
 //Preventing React from shrinking global containers to fit content
@@ -20,6 +23,7 @@ body {
   padding: 0;
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
 }
 
 [data-reactid=".0"] {
@@ -27,4 +31,9 @@ body {
   padding: 0;
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
+}
+
+#page-wrapper {
+  overflow-x: hidden;
 }
